feat: add filter by project ids on history #1015
Co-authored-by: Bruno Thomas <bamthomas@users.noreply.github.com>